const Map<String, Map<String, dynamic>> personalInfoFields = {
  'School': {
    'type': 1,
    'prompt':
        'Select your school, or if youre from somewhere else enter its name',
    'options': [
      'Raffles Girls School',
      'Raffles Institution',
...
      'NUS High School',
      'Nanyang Girls High',
      'School of the Arts',
      'National Junior College',
    ],
  },
  'Height': {
    'type': 0,
    'prompt': 'Enter your height in cm',
    'options': 300,
  },
  'Weight': {
    'type': 0,
...
