...
              child: Align(
                alignment: Alignment.topRight,
                child: Row(
                  mainAxisSize: MainAxisSize.min,
                  children: <Widget>[
                    TileIconButton(
                      key: ValueKey('deleteBtn'),
                      icon: Icons.delete,
                      iconBackgroundColor: MyPalette.red,
                      onPressed: _confirmRemove,
                    ),
                    TileIconButton(
                      icon: Icons.more_vert,
...
                      MenuOption(
                        text: 'Replace with image',
                        onPressed: _replaceWithImage,
                      ),
                      MenuDivider(),
                      MenuOption(
                        text: 'Replace with video',
                        onPressed: _replaceWithVideo,
                      ),
                    ],
                  ),
                ),
              ),
...
