const Map<String, List<String>> interests = {
  'Animals': [
    'Animals',
    'Bird Watching',
    'Birds',
    'Cats',
    'Dogs',
    'Exotic Pets',
    'Fish',
    'Pets'
...
