...
          Padding(
            padding: EdgeInsets.symmetric(vertical: 20.0),
            child: Row(
              mainAxisAlignment: MainAxisAlignment.spaceEvenly,
              children: <Widget>[
                SimpleIconButton(
                  key: ValueKey('settingsBtn'),
                  icon: Icons.settings,
                  size: 34,
                  label: 'Settings',
                  onPressed: _openSettings,
                ),
                SimpleIconButton(
                  key: ValueKey('myProfileBtn'),
                  icon: Icons.person,
                  size: 34,
                  label: 'Profile',
                  onPressed: _openOwnProfileEdit,
                ),
              ],
            ),
          ),
        ],
...
