...
                    ],
                  ),
                ),
                onPressed: _confirmLogout,
              ),
              FlatButton(
                key: ValueKey('deleteAccountBtn'),
                child: Padding(
                  padding: EdgeInsets.symmetric(vertical: 14),
                  child: Row(
                    mainAxisAlignment: MainAxisAlignment.spaceBetween,
                    children: <Widget>[
                      Text(
...
